fix checkbox x align

--- a/public/style.css
+++ b/public/style.css
@@ -115,6 +115,7 @@ main {
             & input:checked ~ .wrapper {
                 & span {
                     color: white;
+                    line-height: 1.4;
                 }
             }
         }
